<?xml version="1.0"?>
<package format="2">
  <name>amcl_relocalization</name>
  <version>0.1.0</version>
  <description>The amcl_relocalization package</description>

  <maintainer email="jun@todo.todo">jun</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>move_base_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>